salesforce/force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <pluralLabel>Bookings</pluralLabel>
    <nameField>
        <displayFormat>BK-{000000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Reserva de cliente. En una org real suele ser el objeto de reservas existente: basta con mapear estos campos.</description>
</CustomObject>