salesforce/force-app/main/default/objects/Booking__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Localizador de la plataforma de venta (lo que teclea el operador).</description>
</CustomField>