salesforce/force-app/main/default/objects/Booking__c/fields/Last_Verification__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification__c</fullName>
    <label>Last Verification</label>
    <type>DateTime</type>
</CustomField>