salesforce/force-app/main/default/objects/Booking__c/fields/Last_Verification_Site__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification_Site__c</fullName>
    <label>Last Verification Site</label>
    <type>Text</type>
    <length>80</length>
    <description>Adaptador de la extensión desde el que se hizo la última verificación.</description>
</CustomField>